--- a/rua_di_bo.ipynb
+++ b/rua_di_bo.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d7929326",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input your color of the turtle you think that is the winner (red, brown, blue, green, orange, pink) rred\n"
+     ]
+    }
+   ],
    "source": [
     "import turtle as t\n",
     "import random\n",
@@ -14,7 +22,7 @@
     "# và các tham số\n",
     "\n",
     "# Hiển thị cửa sổ cho phép người dùng đoán con rùa màu nào thắng cuộc\n",
-    "guess = input(\"input your color of the turtle you think that is the winner (red, ) \")\n",
+    "guess = input(\"input your color of the turtle you think that is the winner (red, brown, blue, green, orange, pink) \")\n",
     "# List lưu lại màu của các con rùa\n",
     "colors = [\"red\", \"brown\", \"blue\", \"green\", \"orange\", \"pink\"]\n",
     "# Vị trí ban đầu theo trục y của các con rùa theo trục x = -250, cách vị trí 0,0 250 về bên trái\n",
@@ -45,14 +53,25 @@
     "        # Kiểm tra điều kiện cán đích Khi 1 con cán đích thì dừng lại\n",
     "        if turtle.xcor() > 250:\n",
     "            run = False\n",
-    "            print(f\"The winner is the {turtle.pencolor()} turtle\")\n",
+    "            t.hideturtle()\n",
+    "            t.penup()\n",
+    "            t.goto(0,200)\n",
+    "            t.pendown()\n",
+    "            t.write(f\"The winner is the {turtle.pencolor()} turtle\")\n",
     "            if guess == turtle.pencolor():\n",
-    "                print(\"You win!\")\n",
+    "                t.penup()\n",
+    "                t.goto(0,190)\n",
+    "                t.pendown()\n",
+    "                t.write(\"You win!\")\n",
+    "            else:\n",
+    "                t.penup()\n",
+    "                t.goto(0,190)\n",
+    "                t.pendown()\n",
+    "                t.write(\"You lose!\")\n",
     "while run:\n",
     "    random_walk(all_turtles)\n",
     "\n",
-    "# Chương trình kết thúc khi click chuột lên màn hình\n",
-    "screen.exitonclick()"
+    "t.done()"
    ]
   }
  ],
