--- a/rua_di_bo.ipynb
+++ b/rua_di_bo.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d7929326",
+   "id": "dd971b0d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input your color of the turtle you think that is the winner (red, brown, blue, green, orange, pink) rred\n"
+      "input your color of the turtle you think that is the winner (red, brown, blue, green, orange, pink) red\n"
      ]
     }
    ],
